@@ -132,6 +132,7 @@
 	     (scm pysk)
 	     (scm ascii-script)
 	     (scm sketch)
+	     (scm pdftex)
 	     )
 
 (define output-alist
@@ -142,6 +143,7 @@
     ("as" . ,as-output-expression)
     ("pysk" . ,pysk-output-expression)
     ("sketch" . ,sketch-output-expression)
+    ("pdftex" . ,pdftex-output-expression)
 ))
 
 
